// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingPopover/> render() should render with value 1`] = `
<body>
  <div>
    <div>
      <button
        class="button btn btn-link"
        id="shipping-lines"
        tabindex="0"
        type="button"
      >
        <strong>
          Add shipping
        </strong>
      </button>
      <span
        class="title"
      >
        Standard Shipping
      </span>
    </div>
  </div>
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`<ShippingPopover/> render() should render without value 1`] = `
<body>
  <div>
    <div>
      <button
        class="button btn btn-link"
        id="shipping-lines"
        tabindex="0"
        type="button"
      >
        <strong>
          Add shipping
        </strong>
      </button>
    </div>
  </div>
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
</body>
`;
